--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ on:
   workflow_dispatch:
 permissions:
   contents: read
-  id-token: write
   pages: write
+  id-token: write
 concurrency:
-  group: pages
+  group: 'pages'
   cancel-in-progress: true
 jobs:
   build:
@@ -24,11 +24,12 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
-      - uses: actions/deploy-pages@v4
   deploy:
     environment:
       name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/deploy-pages@v4
+        id: deployment
