--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "upgrade": "npm run outdated -- -u"
   },
   "dependencies": {
+    "@editorjs/code": "^2.9.2",
+    "@editorjs/delimiter": "^1.4.2",
     "@editorjs/editorjs": "^2.30.6",
+    "@editorjs/embed": "^2.7.4",
     "@editorjs/header": "^2.8.7",
+    "@editorjs/inline-code": "^1.5.1",
     "@editorjs/list": "^1.10.0",
     "@editorjs/paragraph": "^2.11.6",
+    "@editorjs/quote": "^2.7.2",
+    "@editorjs/table": "^2.4.1",
     "autoprefixer": "^10.4.20",
     "gatsby": "^5.13.7",
     "gatsby-plugin-postcss": "^6.13.1",
