--- a/package.json
+++ b/package.json
@@ -31,13 +31,9 @@
     "@editorjs/paragraph": "^2.11.6",
     "@editorjs/quote": "^2.7.2",
     "@editorjs/table": "^2.4.1",
-    "autoprefixer": "^10.4.20",
     "gatsby": "^5.13.7",
-    "gatsby-plugin-postcss": "^6.13.1",
-    "postcss": "^8.4.47",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.13"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
